@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-23T08:22:55Z",
-  "count_outdated" : 591,
-  "uniques_outdated" : 338,
-  "count" : 638,
-  "uniques" : 365,
+  "timestamp" : "2022-10-24T02:01:41Z",
+  "count_outdated" : 594,
+  "uniques_outdated" : 340,
+  "count" : 641,
+  "uniques" : 366,
   "clones" : [
-    {
-      "timestamp": "2022-10-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-10-10T00:00:00Z",
       "count": 2,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-10-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
